# OpenTracker

./: Cargo.toml  README.md  build.rs  install.sh
assets/: categories.json
frontend/: package.json
frontend/src/: index.html
integrations/openclaw/opentracker-daily-dev/: SKILL.md
src/: config.rs  daemon.rs  main.rs
src/ai/: mod.rs
src/analyzer/: categorizer.rs  mod.rs  report.rs
src/api/: mod.rs  routes.rs
src/cli/: mod.rs  onboard.rs
src/collector/: chrome.rs  mod.rs  window.rs
src/db/: mod.rs  queries.rs
src/scheduler/: mod.rs
