[package]
name = "opentracker"
version = "0.1.0"
edition = "2024"
description = "OpenTracker: PC Activity Intelligence & Report System"
license = "MIT"
build = "build.rs"

[[bin]]
name = "OpenTracker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "5"
http = "1"
mime_guess = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
